<resources>
    <string name="app_name"> My Catalogue Movie Extended</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bonaventura Jason</string>
    <string name="nav_header_subtitle">Submission 5 Dicoding</string>
    <string name="nav_header_desc">Search...</string>

    <string name="tools">Tools</string>
    <string name="now_showing">Now Showing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="settings">Settings</string>

    <string name="title">Title</string>
    <string name="release_date">Release Date :</string>
        <string name="popularity">Popularity :</string>
    <string name="count">0</string>
    <string name="true_false">True/False</string>
    <string name="overview">Overview</string>

    <string name="adult">PG - Parental Guidance Suggested</string>
    <string name="nonAdult">G - General Audiences</string>

    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_button">Submit</string>
    <string name="favorite">Favorite</string>
    <string name="appwidget_text">Favorite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO FAVORITE MOVIE</string>
    <string name="content_title">Movie Catalogue</string>
    <string name="content_text">Check what\'s new!</string>
    <string name="release_today_text"> is released today</string>
    <string name="reminder">Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_today">Release Today</string>
    <string name="languages">Languages</string>
    <string name="release_disabled_text">Released movie notification disabled</string>
    <string name="release_enable_text">Released movie notification will appear every 8 a.m.</string>

</resources>
