<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    android:padding="20dp"
    tools:context=".DetailActivity">
    <ImageView
        android:id="@+id/image_movie_extras"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="Image of movie"
        tools:ignore="HardcodedText"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/title_movie_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/date_movie_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"/>


            <TextView
                android:id="@+id/popularity_movie_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"/>

            <TextView
                android:id="@+id/adult_movie_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_false"/>
            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:onClick="newQueryFavorite"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/overview_movie_extras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:text="@string/overview"
        android:textSize="16sp" />
</LinearLayout>