<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/movie_path"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:contentDescription="URL"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="2dp">

                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/overview" />

                <TextView
                    android:id="@+id/movie_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <Button
                        android:id="@+id/detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>